--- a/resource/pom.xml
+++ b/resource/pom.xml
@@ -67,54 +67,62 @@
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacv</artifactId>
-            <version>1.4.4</version>
+            <version>1.5.9</version>
             <exclusions>
+<!--                <exclusion>-->
+<!--                    <groupId>org.bytedeco</groupId>-->
+<!--                    <artifactId>javacpp</artifactId>-->
+<!--                </exclusion>-->
                 <exclusion>
                     <groupId>org.bytedeco</groupId>
-                    <artifactId>javacpp</artifactId>
+                    <artifactId>openblas</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>opencv</artifactId>
+                </exclusion>
+<!--                <exclusion>-->
+<!--                    <groupId>org.bytedeco</groupId>-->
+<!--                    <artifactId>ffmpeg</artifactId>-->
+<!--                </exclusion>-->
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>flycapture</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>libdc1394</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>libfreenect</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>libfreenect2</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>librealsense</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>librealsense2</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>videoinput</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>opencv</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>tesseract</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>leptonica</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>flandmark</artifactId>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>tesseract</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>artoolkitplus</artifactId>
                 </exclusion>
             </exclusions>
@@ -122,80 +130,105 @@
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacv-platform</artifactId>
-            <version>1.4.4</version>
+            <version>1.5.9</version>
             <exclusions>
-                <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>ffmpeg-platform</artifactId>
-                </exclusion>
                 <exclusion>
                     <groupId>org.bytedeco</groupId>
                     <artifactId>javacv</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>flycapture-platform</artifactId>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>openblas-platform</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>libdc1394-platform</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>libfreenect-platform</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>libfreenect2-platform</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>librealsense-platform</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>videoinput-platform</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>opencv-platform</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>tesseract-platform</artifactId>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>ffmpeg-platform</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>flycapture-platform</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>libdc1394-platform</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>libfreenect-platform</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>libfreenect2-platform</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>librealsense-platform</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>librealsense2-platform</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>videoinput-platform</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>artoolkitplus-platform</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>leptonica-platform</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>flandmark-platform</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
-                    <artifactId>artoolkitplus-platform</artifactId>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>tesseract-platform</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <groupId>org.bytedeco</groupId>
             <artifactId>ffmpeg-platform</artifactId>
-            <version>4.1-1.4.4</version>
+            <version>6.0-1.5.9</version>
             <exclusions>
                 <exclusion>
-                    <groupId>org.bytedeco.javacpp-presets</groupId>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>javacpp-platform</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bytedeco</groupId>
                     <artifactId>ffmpeg</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- 根据自己的平台筛选工具 -->
         <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <groupId>org.bytedeco</groupId>
             <artifactId>ffmpeg</artifactId>
-            <version>4.1-1.4.4</version>
+            <version>6.0-1.5.9</version>
             <classifier>${system.env}</classifier>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.bytedeco.javacpp-presets</groupId>-->
+<!--            <artifactId>ffmpeg-platform</artifactId>-->
+<!--            <version>4.1-1.4.4</version>-->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.bytedeco.javacpp-presets</groupId>-->
+<!--                    <artifactId>ffmpeg</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; 根据自己的平台筛选工具 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.bytedeco.javacpp-presets</groupId>-->
+<!--            <artifactId>ffmpeg</artifactId>-->
+<!--            <version>4.1-1.4.4</version>-->
+<!--            <classifier>${system.env}</classifier>-->
+<!--        </dependency>-->
         <!-- swagger3工具 -->
         <dependency>
             <groupId>io.swagger.core.v3</groupId> <!-- 接口文档：使用最新版本的 Swagger 模型 -->
