--- a/fileScan/src/main/resources/application-dev.yml
+++ b/fileScan/src/main/resources/application-dev.yml
@@ -11,5 +11,5 @@ fileScan:
     password:
       123456
   fileMenu:
-#    E:/Videos/
-    D:\wlpia\Documents\Temp\suffix\
+    E:/Videos/
+#    D:\wlpia\Documents\Temp\suffix\
