--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+<!--    j.akarta.servlet.http-->
+<!--    j.akarta.validation.-->
+<!--    j.akarta.annotation-->
     <groupId>org.wlpiaoyi</groupId>
     <artifactId>framework.ee</artifactId>
     <version>1.0.2-BATA-JDK21</version>
@@ -11,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.4</version>
+        <version>3.1.11</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
@@ -24,10 +26,11 @@
 
         <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
         <maven-jar-plugin.version>3.4.0</maven-jar-plugin.version>
+        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <spring.boot.version>3.2.4</spring.boot.version>
+        <spring.boot.version>3.1.11</spring.boot.version>
         <spring.platform.version>Cairo-SR8</spring.platform.version>
         <jakarta.servlet-api.version>6.1.0-M2</jakarta.servlet-api.version>
         <!-- 微服务 -->
@@ -35,13 +38,14 @@
         <spring.cloud.alibaba.version>2021.0.5.0</spring.cloud.alibaba.version>
 
         <!-- Swagger.V3 -->
-        <swagger.version>2.2.19</swagger.version>
-        <springdoc.version>1.7.0</springdoc.version>
-        <knife4j.version>4.3.0</knife4j.version>
+        <springdoc-openapi-ui.version>1.8.0</springdoc-openapi-ui.version>
+        <io.swagger.core.v3.version>2.2.21</io.swagger.core.v3.version>
+        <knife4j-openapi3-jakarta.version>4.5.0</knife4j-openapi3-jakarta.version>
 
         <!-- 数据库 -->
-        <mybatis-spring-boot-starter.version>2.3.2</mybatis-spring-boot-starter.version>
-        <com.baomidou.mybatis-plus.version>3.5.4</com.baomidou.mybatis-plus.version>
+        <mybatis-spring.version>3.0.3</mybatis-spring.version>
+        <mybatis-spring-boot-starter.version>3.0.3</mybatis-spring-boot-starter.version>
+        <com.baomidou.mybatis-plus.version>3.5.6</com.baomidou.mybatis-plus.version>
 
         <skipTests>true</skipTests>
     </properties>
@@ -149,7 +153,22 @@
                 <artifactId>nacos-client</artifactId>
                 <version>${alibaba.nacos.version}</version>
             </dependency>
+             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>3.2.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wlpiaoyi.framework.ee</groupId>
+                <artifactId>utils</artifactId>
+                <version>${ee.project.version}</version>
+            </dependency>
             <!-- 数据库 -->
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${mybatis-spring.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -176,31 +195,42 @@
                 <version>${com.baomidou.mybatis-plus.version}</version>
             </dependency>
             <!-- swagger3工具 -->
+<!--            <dependency>-->
+<!--                <groupId>org.springdoc</groupId> &lt;!&ndash; 接口文档 UI：默认 &ndash;&gt;-->
+<!--                <artifactId>springdoc-openapi-ui</artifactId>-->
+<!--                <version>${springdoc-openapi-ui.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>io.swagger.core.v3</groupId> <!-- 接口文档：使用最新版本的 Swagger 模型 -->
                 <artifactId>swagger-annotations</artifactId>
-                <version>${swagger.version}</version>
+                <version>${io.swagger.core.v3.version}</version>
                 <!-- <scope>provided</scope> &lt;!&ndash; 设置为 provided，主要是 PageParam 使用到 &ndash;&gt;-->
             </dependency>
             <dependency>
                 <groupId>io.swagger.core.v3</groupId> <!-- 接口文档：使用最新版本的 Swagger 模型 -->
                 <artifactId>swagger-models</artifactId>
-                <version>${swagger.version}</version>
+                <version>${io.swagger.core.v3.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.springdoc</groupId> <!-- 接口文档 UI：默认 -->
-                <artifactId>springdoc-openapi-ui</artifactId>
-                <version>${springdoc.version}</version>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+                <version>${knife4j-openapi3-jakarta.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.github.xiaoymin</groupId> <!-- 接口文档 UI：knife4j -->
-                <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
-                <version>${knife4j.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.github.xiaoymin</groupId> &lt;!&ndash; 接口文档 UI：knife4j &ndash;&gt;-->
+<!--                <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>-->
+<!--                <version>${knife4j-openapi3-spring-boot-starter.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok-maven-plugin</artifactId>
                 <version>${lombok-maven-plugin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -244,7 +274,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>${maven-jar-plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
