--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -70,5 +70,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <build>
+        <finalName>ee.utils</finalName>
+    </build>
 </project>
